Removed hover-to-open, swaps/comp tracking, fixed text overflow

--- a/src/components/InfoCard/style.css
+++ b/src/components/InfoCard/style.css
@@ -12,7 +12,7 @@
 	right: 0;
 	top: 0;
 	height: 100vh;
-	width: 25vw;
+	width: 35vw;
 	background-color: #262626;
 	color: white;
 	padding: 2em;
@@ -26,10 +26,6 @@
 	margin: 1em 0;
 }
 
-.description {
-	margin: 1em 0;
-}
-
 .openCardButton {
 	position: absolute;
 	top: 1em;
@@ -38,6 +34,14 @@
 	border: none;
 	color: white;
 	cursor: pointer;
+}
+
+.openCardButton:hover {
+	color: rgb(143, 143, 143);
+}
+
+.openCardButton:focus {
+	outline: none;
 }
 
 .card::-webkit-scrollbar {
@@ -64,6 +68,12 @@
 	color: rgba(255, 255, 255, 0.829);
 	margin: 1em 0;
 	margin-right: 0;
+}
+
+.description {
+	line-height: 1.5em;
+	margin: 1em 0;
+	text-align: center;
 }
 
 .help {
