--- a/src/components/Menu/style.css
+++ b/src/components/Menu/style.css
@@ -29,6 +29,14 @@
 	border: none;
 }
 
+.openMenuButton:hover {
+	color: rgb(143, 143, 143);
+}
+
+.openMenuButton:focus {
+	outline: none;
+}
+
 .menuCard * {
 	margin-bottom: 1em;
 }
@@ -66,12 +74,4 @@
 
 .item {
 	transform: scale(2);
-}
-
-.hoverToOpen {
-	position: absolute;
-	top: 0;
-	left: 0;
-	height: 100vh;
-	width: 5vw;
 }
